style.css
/* ... */
input[type="radio"] {
    border-radius: 50%;
}
input[type="checkbox"] + label,
input[type="radio"] + label {
    position: relative;
    display: inline;
    margin-left: 5px;
    line-height: 1.4;
}
input[type="checkbox"]::after,
input[type="radio"]::after {
    content: '';
    opacity: 0;
    position: absolute;
    top: 0;
    left: 0;
    cursor: pointer;
    transition: 0.1s;
}
input[type="checkbox"]::after {
    width: 6px;
    height: 10px;
    margin: 0 0 0 3px;
    border: 3px solid;
    border-top: 0;
    border-left: 0;
    transform: rotate(35deg);
}
input[type="radio"]::after {
    background-color: currentColor;
    width: 8px;
    height: 8px;
    margin: 2px 0 0 2px;
    border-radius: 50%;
}
input[type="checkbox"]:checked::after,
input[type="radio"]:checked::after {
    opacity: 1;
}

@media (max-width: 850px) {
    input[type="text"],
    input[type="password"],
    input[type="number"],
    input[type="tel"],
    input[type="url"],
    input[type="email"],
    input[type="search"],
    textarea,
    select {
        font-size: 15px;
    }
    input[type="checkbox"],
    input[type="radio"] {
        width: 15px;
        height: 15px;
    }
    input[type="checkbox"]::after {
        width: 5px;
        height: 9px;
        border-width: 2px;
    }
    input[type="radio"]::after {
        width: 7px;
        height: 7px;
    }
}
@media (max-width: 550px) {
    input[type="text"],
    input[type="password"],
    input[type="number"],
    input[type="tel"],
    input[type="url"],
    input[type="email"],
    input[type="search"],
    textarea,
    select {
        font-size: 14px;
    }
    input[type="checkbox"] + label,
    input[type="radio"] + label {
        margin-left: 4px;
    }
    input[type="checkbox"],
    input[type="radio"] {
        width: 14px;
        height: 14px;
        border-width: 1px;
    }
    input[type="checkbox"]::after {
        margin: 1px 0 0 4px;
        width: 4px;
    }
    input[type="radio"]::after {
        width: 8px;
        height: 8px;
        margin: 2px 0 0 2px;
    }
}
@media (max-width: 400px) {
    input[type="text"],
    input[type="password"],
    input[type="number"],
    input[type="tel"],
    input[type="url"],
    input[type="email"],
    input[type="search"],
    textarea,
    select {
        font-size: 13px;
    }
    input[type="checkbox"],
    input[type="radio"] {
        width: 13px;
        height: 13px;
    }
    input[type="checkbox"]::after {
        width: 5px;
        margin: 0 0 0 3px;
    }
    input[type="radio"]::after {
        width: 7px;
        height: 7px;
    }
}

/*--------------------------------------------------------------
# Gravity Forms
--------------------------------------------------------------*/
.gravity-form-wrap > p,
.gravity-form-wrap .gf_submission_limit_message p {
    /* style for Gravity Forms messages such as entry limit, scheduled, login required */
    margin: 0;
    font-style: italic;
}
.gform_wrapper {
    transition: opacity 0.2s;
}
.gform_wrapper.loading {
    opacity: 0.5;
    cursor: wait;
}
.gform_wrapper.loading form {
    pointer-events: none;
}
.gform_wrapper .gform_validation_errors {
    margin-bottom: 40px;
}
.gform_wrapper .gform_submission_error {
    margin-bottom: 10px;
    padding: 20px 25px;
}
.gform_wrapper .gform_submission_error:last-child {
    margin-bottom: 0;
}
.gform_wrapper .gform_submission_error .gform-icon {
    display: none;
}
.gform_fields {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    margin: -10px -8px;
    padding: 0;
    list-style: none;
}
.gform_wrapper.gravity-theme .gform_body .gform_fields {
    display: flex;
    grid-gap: 0;
}
.basic-form_center .gform_fields {
    justify-content: center;
}
.basic-form_right .gform_fields {
    justify-content: flex-end;
}
.gfield {
    flex: 0 0 auto;
    width: 100%;
    padding: 10px 8px;
}
.gform_wrapper.gravity-theme fieldset.gfield {
    margin: 10px 0; /* margin instead of vertical padding to avoid fieldset weirdness */
    padding: 0 8px;
}
.gfield.gsection:not(:first-child) {
    padding-top: 30px;
}
.gfield.gfield--width-eleven-twelfths {
    width: 91.67%;
}
.gfield.gfield--width-five-sixths {
    width: 83.33%;
}
.gfield.gfield--width-three-quarter {
    width: 75%;
}
.gfield.gfield--width-two-thirds {
    width: 66.67%;
}
.gfield.gfield--width-seven-twelfths {
    width: 58.33%;
}
.gfield.gfield--width-half {
    width: 50%;
}
.gfield.gfield--width-five-twelfths {
    width: 41.67%;
}
.gfield.gfield--width-third {
    width: 33.33%;
}
.gfield.gfield--width-quarter {
    width: 25%;
}
.gfield.spacer {
    padding: 0;
}
.gfield .gsection_title {
    margin-bottom: 5px;
}
.gfield .gsection_title:last-child {
    margin-bottom: 0;
}
.gfield .gfield_label,
.form_saved_message .gfield_label {
    display: inline-block;
    margin-bottom: 3px;
}
.gfield .ginput_quantity_label {
    display: block;
    margin: 8px 0 2px;
}
.gform_wrapper .gfield_required::before {
    content: '*';
}
.gform_wrapper .gfield_required_text {
    display: block;
    border: 0;
	clip: rect(1px, 1px, 1px, 1px);
	clip-path: inset(50%);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute !important;
	width: 1px;
	word-wrap: normal !important;
}
.gform_wrapper .gfield_required_text::before {
    display: none;
}
.gfield .copy_values_option_container {
    margin: 5px 0 8px;
}
.gfield.hidden_label .copy_values_option_container {
    margin-top: 0;
}
.gfield .ginput_container {
    margin-top: 5px;
}
.gfield.field_sublabel_above .ginput_container,
.gfield.hidden_label .ginput_container,
.gfield .ginput_container_singleproduct {
    margin-top: 0;
}
.gfield .ginput_complex {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    margin-right: -4px;
    margin-bottom: -8px;
    margin-left: -4px;
}
.gfield .ginput_complex > span,
.gfield .ginput_complex > div {
    flex: 1 0 auto;
    display: block;
    padding: 0 4px 8px;
}
/* ... */

